--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "license": "ISC",
   "main": "dist/index.js",
-  "name": "@dizmo/random",
+  "name": "@dizmo/dizmo-functions-random",
   "repository": {
     "type": "git",
     "url": ""
