--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js :
 install:
  - npm install
 script:
- - npm run lint
  - npm run cover
 
-after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+after_script: "npx nyc report --reporter=text-lcov | npx coveralls"
