--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
