--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "yargs": "^12.0.1"
   },
   "files": [
     "dist/lib"
