--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": {
     "name": "Hasan Karahan",
-    "email": "hkarahan@dizmo.com",
+    "email": "hasan.karahan@blackhan.com",
     "url": "https://github.com/hsk81"
   },
   "dependencies": {},
