DD-4407: {Math.random=>crypto.randomBytes}

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "email": "hkarahan@dizmo.com",
     "url": "https://github.com/hsk81"
   },
-  "dependencies": {},
+  "dependencies": {
+    "randombytes": "^2.1.0"
+  },
   "description": "random strings",
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -13,6 +15,7 @@
     "@babel/preset-env": "^7.11.5",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "4.1.0",
     "@typescript-eslint/parser": "4.1.0",
     "chai": "^4.2.0",
