--- a/package.json
+++ b/package.json
@@ -5,33 +5,33 @@
     "url": "https://github.com/hsk81"
   },
   "dependencies": {
-    "buffer": "^5.7.0",
+    "buffer": "^6.0.3",
     "randombytes": "^2.1.0"
   },
   "description": "random strings",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.14.6",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "chai": "^4.2.0",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
+    "chai": "^4.3.4",
     "coveralls": "^3.1.0",
-    "eslint": "^7.12.1",
+    "eslint": "^7.26.0",
     "esm": "^3.2.25",
     "minami": "^1.2.3",
-    "mocha": "^8.2.0",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "source-map-loader": "^1.1.2",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.1",
-    "webpack-cli": "^4.1.0",
-    "yargs": "^16.1.0"
+    "source-map-loader": "^2.0.2",
+    "typedoc": "^0.20.36",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "yargs": "^17.0.1"
   },
   "files": [
     "dist/lib"
@@ -56,6 +56,7 @@
     "docs": "node ./cli/run-docs.js",
     "lint": "node ./cli/run-lint.js",
     "prepack": "node ./cli/run-prepack.js",
+    "prepare": "npm run -- build --prepack",
     "test": "node ./cli/run-test.js"
   },
   "types": "dist/lib/index.d.ts",
