--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://github.com/hsk81"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
+    "buffer": "=5.7.1",
     "randombytes": "^2.1.0"
   },
   "description": "random strings",
